@@ -17,7 +17,14 @@ class UpdateGUI(tk.Canvas):
     """
 
     def __init__(self, root, tdb, cmdenv):
-        super().__init__(root, borderwidth=0, width=500, height=440)
+        width = cmdenv.width or 512
+        height = cmdenv.height or 640
+        sticky = 1 if cmdenv.alwaysOnTop else 0
+
+        super().__init__(root, borderwidth=0, width=width, height=height)
+        root.geometry("{}x{}-0+0".format(
+                    width+32, height
+                ))
 
         self.root = root
         self.tdb = tdb
@@ -31,6 +38,8 @@ class UpdateGUI(tk.Canvas):
         self.itemDisplays = []
         self.results = None
         self.headings = []
+
+        root.wm_attributes("-topmost", sticky)
 
         self.bind_all("<MouseWheel>", self.onMouseWheel)
         self.vsb = tk.Scrollbar(root, orient="vertical", command=self.yview)
